fixinf manifest.json

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Svelte demo app" />
-    <link rel="icon" href="%svelte.assets%/favicon.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="%svelte.assets%/favicons/apple-icon-57x57.png"/>
     <link rel="apple-touch-icon" sizes="60x60" href="%svelte.assets%/favicons/apple-icon-60x60.png"/>
     <link rel="apple-touch-icon" sizes="72x72" href="%svelte.assets%/favicons/apple-icon-72x72.png"/>
@@ -20,7 +19,7 @@
     <meta name="msapplication-TileColor" content="#ffffff"/>
     <meta name="msapplication-TileImage" content="%svelte.assets%/favicons/ms-icon-144x144.png"/>
     <meta name="theme-color" content="#ffffff"/>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href='%svelte.assets%/manifest.json' />
     <meta property="og:title" content="Zwei Jahre | Jahrestag 2020" />
     <meta
       property="og:url"
