fixing manifest.json

--- a/src/app.html
+++ b/src/app.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Svelte demo app" />
-    <link rel="apple-touch-icon" sizes="57x57" href="%svelte.assets%/favicons/apple-icon-57x57.png"/>
-    <link rel="apple-touch-icon" sizes="60x60" href="%svelte.assets%/favicons/apple-icon-60x60.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="%svelte.assets%/favicons/apple-icon-72x72.png"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="%svelte.assets%/favicons/apple-icon-76x76.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="%svelte.assets%/favicons/apple-icon-114x114.png"/>
-    <link rel="apple-touch-icon" sizes="120x120" href="%svelte.assets%/favicons/apple-icon-120x120.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="%svelte.assets%/favicons/apple-icon-144x144.png"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="%svelte.assets%/favicons/apple-icon-152x152.png"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="%svelte.assets%/favicons/apple-icon-180x180.png"/>
-    <link rel="icon" type="image/png" sizes="192x192" href="%svelte.assets%/favicons/android-icon-192x192.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="%svelte.assets%/favicons/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="96x96" href="%svelte.assets%/favicons/favicon-96x96.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="%svelte.assets%/favicons/favicon-16x16.png"/>
-    <meta name="msapplication-TileColor" content="#ffffff"/>
-    <meta name="msapplication-TileImage" content="%svelte.assets%/favicons/ms-icon-144x144.png"/>
-    <meta name="theme-color" content="#ffffff"/>
-    <link rel="manifest" href='%svelte.assets%/manifest.json' />
-    <meta property="og:title" content="Zwei Jahre | Jahrestag 2020" />
-    <meta
-      property="og:url"
-      content="https://sumwunspeshal.github.io/zweijahre"
-    />
-    <meta
-      property="og:image"
-      content="https://sumwunspeshal.github.io/zweijahre/assets/images/og-preview/og-preview.png"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:description"
-      content="Jahrestagsgeschenk von Sacha an Regina. Finde ein Jahr lang jede Woche kleine Nachrichten von mir an Dich. Liebe!"
-    />
-    <meta property="og:locale" content="de_DE" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
-  </head>
-  <body>
-    %svelte.body%
-  </body>
+<html lang='en'>
+<head>
+  <meta charset='utf-8' />
+  <meta name='description' content='Svelte demo app' />
+  <link rel='apple-touch-icon' sizes='57x57' href='%svelte.assets%/favicons/apple-icon-57x57.png' />
+  <link rel='apple-touch-icon' sizes='60x60' href='%svelte.assets%/favicons/apple-icon-60x60.png' />
+  <link rel='apple-touch-icon' sizes='72x72' href='%svelte.assets%/favicons/apple-icon-72x72.png' />
+  <link rel='apple-touch-icon' sizes='76x76' href='%svelte.assets%/favicons/apple-icon-76x76.png' />
+  <link rel='apple-touch-icon' sizes='114x114' href='%svelte.assets%/favicons/apple-icon-114x114.png' />
+  <link rel='apple-touch-icon' sizes='120x120' href='%svelte.assets%/favicons/apple-icon-120x120.png' />
+  <link rel='apple-touch-icon' sizes='144x144' href='%svelte.assets%/favicons/apple-icon-144x144.png' />
+  <link rel='apple-touch-icon' sizes='152x152' href='%svelte.assets%/favicons/apple-icon-152x152.png' />
+  <link rel='apple-touch-icon' sizes='180x180' href='%svelte.assets%/favicons/apple-icon-180x180.png' />
+  <link rel='icon' type='image/png' sizes='192x192' href='%svelte.assets%/favicons/android-icon-192x192.png' />
+  <link rel='icon' type='image/png' sizes='32x32' href='%svelte.assets%/favicons/favicon-32x32.png' />
+  <link rel='icon' type='image/png' sizes='96x96' href='%svelte.assets%/favicons/favicon-96x96.png' />
+  <link rel='icon' type='image/png' sizes='16x16' href='%svelte.assets%/favicons/favicon-16x16.png' />
+  <meta name='msapplication-TileColor' content='#ffffff' />
+  <meta name='msapplication-TileImage' content='%svelte.assets%/favicons/ms-icon-144x144.png' />
+  <meta name='theme-color' content='#ffffff' />
+  <link rel='manifest' href='%svelte.assets%/manifest.json' />
+  <meta property='og:title' content='Zwei Jahre | Jahrestag 2020' />
+  <meta
+    property='og:url'
+    content='https://zwei-jahre-ssr.vercel.app/'
+  />
+  <meta
+    property='og:image'
+    content='https://zwei-jahre-ssr.vercel.app/assets/images/og-preview/og-preview.png'
+  />
+  <meta property='og:type' content='website' />
+  <meta
+    property='og:description'
+    content='Jahrestagsgeschenk von Sacha an Regina. Finde ein Jahr lang jede Woche kleine Nachrichten von mir an Dich. Liebe!'
+  />
+  <meta property='og:locale' content='de_DE' />
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
+  %svelte.head%
+</head>
+<body>
+%svelte.body%
+</body>
 </html>
