fixing manifest.json

--- a/src/app.html
+++ b/src/app.html
@@ -27,7 +27,7 @@
   />
   <meta
     property='og:image'
-    content='https://zwei-jahre-ssr.vercel.app/assets/images/og-preview/og-preview.png'
+    content='%svelte.assets%/og-preview/og-preview.png'
   />
   <meta property='og:type' content='website' />
   <meta
